Fixed stack overflow [Bug #16382]

Get rid of infinite recursion in expanding a load path to the real
path while loading a transcoder.